fix: [APAAS-890] video list wrap wrong

--- a/packages/agora-scenario-ui-kit/src/styles/scenario.css
+++ b/packages/agora-scenario-ui-kit/src/styles/scenario.css
@@ -4,8 +4,7 @@
 }
 
 .layout-video {
-  align-items: center;
-  justify-content: center;
+  display: block;
 }
 
 .chat-border {
